--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "http://IsaacKlark.github.io/polydimensional_cube",
   "name": "polydimensional_cube",
   "version": "0.1.0",
   "private": true,
