--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "gpu.js": "^2.15.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-number-format": "^5.0.0-beta.5",
     "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.5",
     "sylvester": "0.0.21"
   },
   "scripts": {
